feat: Enhance SEO and update image
Update page title, meta description, and JSON metadata for improved search engine visibility. Also, update the doctor's image URL to the correct source. Remove unused LinkedIn icon.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr. Rodrigo Gonçalves - Pneumologista e Cirurgião Torácico</title>
-    <meta name="description" content="Agende sua consulta com Dr. Rodrigo Gonçalves. Especialista em Pneumologia e Cirurgia Torácica em Niterói, Itaboraí e Saquarema." />
+    <title>Dr. Rodrigo Gonçalves | Pneumologista e Cirurgião Torácico em Niterói, Itaboraí e Saquarema</title>
+    <meta name="description" content="Especialista em Pneumologia e Cirurgia Torácica. Tratamento de tosse crônica, asma, DPOC, nódulos pulmonares e cirurgias. Atendimento em Niterói, Itaboraí e Saquarema. Agende agora." />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom scrollbar for better aesthetics */
